--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -39,7 +39,7 @@ body {
   background: #eee;
   border-radius: 50%;
   color: #888;
-  font-weight: 400;
+  font-weight: 100;
   font-size: 16px;
   height: 24px;
   width: 24px;
@@ -63,4 +63,29 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+/* */
+
+.modal {
+  display: flex;
+  gap: 16px;
+  padding: 16px; 
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 700;
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+
+.icon {
+  flex-shrink: 0;
+}
+
+.text {
+  margin-bottom: 16px;
 }
