--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -4,6 +4,10 @@ body, html {
 }
 
 .container {
+  display: grid;
+  grid-template-columns: 200px 800px;
+  grid-template-rows: 100px 100px 500px 100px;
+  gap: 15px;
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -21,18 +25,25 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-column: 2 / 4;
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: 2/4;
+  
 }
 
 .article p {
@@ -44,4 +55,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 4;
 }
